welcome.lessons.welcome.variables.Variables.scala.code
var x: Int=0
prendBiscuit();
if (estSurBiscuit){
	prendBiscuit();
	while (!x=0){
		x=x-1
		recule()
	}
}else{
	while(estSurBiscuit==false){
		avance()
	}
}
